Don't use the docker container registry

--- a/.github/actions/Dockerfile
+++ b/.github/actions/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.pkg.github.com/tonybaloney/pycharm-security/pycharm-security:1.4.2
+FROM anthonypjshaw/pycharm-security:latest
 COPY action.sh /action.sh
 RUN ["chmod", "+x", "/action.sh"]
 ENTRYPOINT ["/action.sh"]
