--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -7,7 +7,8 @@ jobs:
     name: Execute the pycharm-security action
     steps:
       - uses: actions/checkout@v1
-        repository: 'tonybaloney/pycharm-security-testing'
+        with:
+          repository: 'tonybaloney/pycharm-security-testing'
       - name: Run PyCharm Security
         id: pycharm-security
         uses: ./
