--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v1
         with:
           repository: 'tonybaloney/pycharm-security-testing'
+          ref: 'master'
       - name: Run PyCharm Security
         id: pycharm-security
         uses: ./
