--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -11,7 +11,6 @@ jobs:
           repository: 'tonybaloney/pycharm-security-testing'
           ref: 'master'
       - name: Run PyCharm Security
-        id: pycharm-security
-        uses: ./
+        uses: tonybaloney/pycharm-security@master
         with:
           path: .
