Update readme to help GitHub Action users

--- a/.github/actions/Dockerfile
+++ b/.github/actions/Dockerfile
@@ -1,4 +1,4 @@
-FROM anthonypjshaw/pycharm-security:latest
+FROM anthonypjshaw/pycharm-security:release-1.4.4
 COPY action.sh /action.sh
 RUN ["chmod", "+x", "/action.sh"]
 ENTRYPOINT ["/action.sh"]
