--- a/.github/workflows/build-plugin.yml
+++ b/.github/workflows/build-plugin.yml
@@ -11,18 +11,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build plugin
-      run: ./gradlew buildPlugin
+        java-version: 11
+    - uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: test -PintellijPublishToken=FAKE_TOKEN -PideaPath="" --info
+    - uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: buildPlugin -PintellijPublishToken=FAKE_TOKEN -PideaPath="" --info
     - name: Upload build
       uses: actions/upload-artifact@v1.0.0
       with:
         # Artifact name
-        name: "*.zip"
+        name: "pycharm-security-${version}.zip"
         # Directory containing files to upload
-        path: build/
+        path: build/distributions
+        env:
+          version: $GITHUB_REF
