--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,8 @@ runs:
   image: '.github/actions/Dockerfile'
   args:
     - ${{ inputs.path }}
+    - ${{ inputs.profile }}
+    - ${{ inputs.fail_on_warnings }}
 branding:
   icon: 'lock'
   color: 'blue'
