--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,16 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      <h2>1.7.1 (minor bug fixes)</h2>
+      <h2>1.7.1</h2>
+      <ul>
+        <li>Added pickle load inspection [PIC100]</li>
+        <li>Added django safe strings inspection [DJG102]</li>
+        <li>Added hardcoded temp path read or write inspection [TMP101]</li>
+        <li>Added XML std library exploit inspection [XML100]</li>
+        <li>Added XML RPC dotted paths inspection [XML200]</li>
+        <li>Added links to documentation in inspection details</li>
+      </ul>
+      <h2>Minor bug fixes</h2>
       <ul>
         <li>Fixed bug on pyyaml inspection raising false positives when Loader=SafeLoader is set</li>
         <li>Fixed minor bug on plugin XML having wrong short name</li>
