--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.intellij' version '0.4.15'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'jacoco'
+    id 'org.kordamp.gradle.markdown' version '2.0.0'
 }
 
 group 'org.tonybaloney.security'
@@ -63,4 +64,9 @@ jacocoTestReport {
         html.enabled false
         csv.enabled false
     }
+}
+
+markdownToHtml {
+    sourceDir file("doc/checks/")
+    outputDir file("src/main/resources/docs")
 }
