Use fenced code blocks

--- a/build.gradle
+++ b/build.gradle
@@ -69,4 +69,5 @@ jacocoTestReport {
 markdownToHtml {
     sourceDir file("doc/checks/")
     outputDir file("src/main/resources/docs")
+    fencedCodeBlocks true
 }
