--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.11.0'
+version '1.12.0'
 
 repositories {
     mavenCentral()
@@ -37,10 +37,9 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      <h2>1.11.0</h2>
+      <h2>1.12.0</h2>
       <ul>
-        <li>Added configuration option to ignore code inside docstrings (enabled by default)</li>
-        <li>Fix matching bug for packages which were installed with mixed-case names</li>
+        <li>Added [DJG103] to look for use of the Django `extra()` API on a query set with quoted parameters.</li>
       </ul>
       """
 }
