--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ test {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version 'PC-2019.3.1'
+    version 'PC-2019.3.3'
     type 'PC'
     plugins 'python-ce', 'yaml'
     updateSinceUntilBuild false
@@ -40,6 +40,7 @@ patchPluginXml {
       <h2>1.12.0</h2>
       <ul>
         <li>Added [DJG103] to look for use of the Django `extra()` API on a query set with quoted parameters.</li>
+        <li>Extended [DJG102] to include quoted templated variable names, e.g. `'%(variable)s'`</li>
       </ul>
       """
 }
