--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,26 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Build PC-2019.3.3
+      uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: build -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
+    - name: Test PC-2019.3.3
+      uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
+    - name: Build PC-201.5616-EAP-CANDIDATE-SNAPSHOT
+      uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: build -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-201.5616-EAP-CANDIDATE-SNAPSHOT
+    - name: Test 201.5616-EAP-CANDIDATE-SNAPSHOT
+      uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-201.5616-EAP-CANDIDATE-SNAPSHOT
+
     - uses: eskatos/gradle-command-action@v1
       with:
-        arguments: build -PintellijPublishToken=FAKE_TOKEN -PideaPath="" --info
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: test -PintellijPublishToken=FAKE_TOKEN -PideaPath="" --info
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN
+        arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
     - name: Codecov
       uses: codecov/codecov-action@v1.0.5
       with:
