--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Test 201.5616-EAP-CANDIDATE-SNAPSHOT
       uses: eskatos/gradle-command-action@v1
       with:
-        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-201.5616-EAP-CANDIDATE-SNAPSHOT
+        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=201.5616-EAP-CANDIDATE-SNAPSHOT
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
