--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,20 +7,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        pycharm-version: ['PC-2019.3.3', '201.5616-EAP-CANDIDATE-SNAPSHOT']
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Test PC-2019.3.3
+    - name: Test
       uses: eskatos/gradle-command-action@v1
       with:
-        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
-    - name: Test 201.5616-EAP-CANDIDATE-SNAPSHOT
-      uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=201.5616-EAP-CANDIDATE-SNAPSHOT
+        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion={{ matrix.pycharm-version }}
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
