--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ jobs:
     - name: Test
       uses: eskatos/gradle-command-action@v1
       with:
-        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion={{ matrix.pycharm-version }}
+        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=$VERSION
+      env:
+        VERSION: ${{ matrix.pycharm-version }}
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
