--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push]
 
 jobs:
-  gradle:
+  tests:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -17,9 +17,14 @@ jobs:
     - name: Test
       uses: eskatos/gradle-command-action@v1
       with:
-        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=$VERSION
-      env:
-        VERSION: ${{ matrix.pycharm-version }}
+        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=${{ matrix.pycharm-version }}
+  coverage:
+    runs-on: 'ubuntu-latest'
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+    with:
+      java-version: 11
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
