--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,23 @@ name: CI
 on: [push]
 
 jobs:
-  gradle:
+  tests:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        pycharm-version: ['PC-2019.3.3', '201.5616-EAP-CANDIDATE-SNAPSHOT']
     runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Test
+      uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: test -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=${{ matrix.pycharm-version }}
+  coverage:
+    runs-on: 'ubuntu-latest'
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -15,13 +27,7 @@ jobs:
         java-version: 11
     - uses: eskatos/gradle-command-action@v1
       with:
-        arguments: build -PintellijPublishToken=FAKE_TOKEN -PideaPath="" --info
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: test -PintellijPublishToken=FAKE_TOKEN -PideaPath="" --info
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN
+        arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
     - name: Codecov
       uses: codecov/codecov-action@v1.0.5
       with:
