--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ repositories {
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    testImplementation "net.bytebuddy:byte-buddy:1.10.5"
-    testImplementation "net.bytebuddy:byte-buddy-agent:1.10.5"
+    testImplementation "net.bytebuddy:byte-buddy:1.10.8"
+    testImplementation "net.bytebuddy:byte-buddy-agent:1.10.8"
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
 }
@@ -29,11 +29,13 @@ test {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version 'PC-2019.3.3'
     type 'PC'
     plugins 'python-ce', 'yaml'
     updateSinceUntilBuild false
 }
+// Make the intellij version overridable on the command line to support multiple build versions..
+intellij.version = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '2019.3'
+
 
 patchPluginXml {
     changeNotes """
