Build a Snyk API client, add the configuration settings, add test classes and abstract the SafetyDb into an interface so the action and tasks don't rely on it's internal data structure. Abstract the warning message into a function

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -70,7 +70,7 @@
     <extensions defaultExtensionNs="Pythonid">
     </extensions>
     <actions>
-        <action id="Security.CheckSafetyDB" class="security.packaging.SafetyDbCheckerAction" text="Check Python Package Security" description="Check the installed Python packages for any known vulnerabilities." >
+        <action id="Security.CheckSafetyDB" class="security.packaging.PackageCheckerAction" text="Check Python Package Security" description="Check the installed Python packages for any known vulnerabilities." >
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
     </actions>
