Use particular 2019 ranges for this package, 201 breaks compatibility

--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ patchPluginXml {
 
 publishPlugin {
     token intellijPublishToken
-    channels 'beta'
+    // channels 'beta'
 }
 
 jacocoTestReport {
