--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ intellij {
     updateSinceUntilBuild false
 }
 // Make the intellij version overridable on the command line to support multiple build versions..
-intellij.version = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '201-EAP-SNAPSHOT'
+intellij.version = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '201.5985-EAP-CANDIDATE-SNAPSHOT'
 
 
 patchPluginXml {
