Switch project to primarily use 2020 (#108)
* Create 2020.1-EAP branch

* Use build 201.5985-EAP-CANDIDATE-SNAPSHOT

* String format detection (#96) (#100)

- Issue #95

* Update safetydb

* Merge branch 'pyup_april_update' into 2020.1-EAP

# Conflicts:
#	.github/workflows/build.yml
#	build.gradle

* Fix string index error in tiny range strings

* Unfix the merge

* Update build and release

* Set 2020 as the primary build target

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        pycharm-version: ['PC-2019.3.3']
+        pycharm-version: ['2020.1']
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
@@ -27,7 +27,7 @@ jobs:
         java-version: 11
     - uses: eskatos/gradle-command-action@v1
       with:
-        arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2019.3.3
+        arguments: jacocoTestReport -PintellijPublishToken=FAKE_TOKEN -PintellijVersion=PC-2020.1
     - name: Codecov
       uses: codecov/codecov-action@v1.0.5
       with:
