Set output for github action and support exclude

--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
     description: 'Fail the task if warnings were found in the code'
     required: false
     default: "no"
+  exclude:
+    description: 'Exclude path from scan'
+    required: false
 outputs:
   result:
     description: 'Results from the scan'
@@ -24,6 +27,7 @@ runs:
     - ${{ inputs.path }}
     - ${{ inputs.profile }}
     - ${{ inputs.fail_on_warnings }}
+    - ${{ inputs.exclude }}
 branding:
   icon: 'lock'
   color: 'blue'
