--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,11 @@ version '1.19.0'
 
 repositories {
     mavenCentral()
+    jcenter()
+    maven { url "https://dl.bintray.com/kotlin/ktor" }
+    maven { url "https://dl.bintray.com/kotlin/kotlinx" }
 }
+def ktor_version = "1.3.2"
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
@@ -19,6 +23,9 @@ dependencies {
     testImplementation "net.bytebuddy:byte-buddy:1.10.8"
     testImplementation "net.bytebuddy:byte-buddy-agent:1.10.8"
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    compile "io.ktor:ktor-client-core:$ktor_version"
+    compile "io.ktor:ktor-client-apache:$ktor_version"
+    compile "io.ktor:ktor-client-gson:$ktor_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
 }
 
