--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.4.15'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
     id 'jacoco'
     id 'org.kordamp.gradle.markdown' version '2.0.0'
 }
 
 group 'org.tonybaloney.security'
-version '1.19.0'
+version '1.20.0'
 
 repositories {
     mavenCentral()
@@ -22,7 +22,7 @@ dependencies {
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "net.bytebuddy:byte-buddy:1.10.8"
     testImplementation "net.bytebuddy:byte-buddy-agent:1.10.8"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.70"
     compile "io.ktor:ktor-client-core:$ktor_version"
     compile "io.ktor:ktor-client-apache:$ktor_version"
     compile "io.ktor:ktor-client-gson:$ktor_version"
