--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
+
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.4.15'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
+    id 'org.jetbrains.kotlin.jvm' version "1.3.70"
     id 'jacoco'
     id 'org.kordamp.gradle.markdown' version '2.0.0'
 }
@@ -9,24 +10,29 @@ plugins {
 group 'org.tonybaloney.security'
 version '1.20.0'
 
+def ktor_version = "1.3.2"
+def kotlin_version = "1.3.70"
+
 repositories {
     mavenCentral()
     jcenter()
     maven { url "https://dl.bintray.com/kotlin/ktor" }
     maven { url "https://dl.bintray.com/kotlin/kotlinx" }
 }
-def ktor_version = "1.3.2"
+
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "net.bytebuddy:byte-buddy:1.10.8"
     testImplementation "net.bytebuddy:byte-buddy-agent:1.10.8"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.70"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-client-core:$ktor_version"
     compile "io.ktor:ktor-client-apache:$ktor_version"
+    compile "io.ktor:ktor-client-cio:$ktor_version"
     compile "io.ktor:ktor-client-gson:$ktor_version"
-    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 test {
