--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
-
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.4.15'
-    id 'org.jetbrains.kotlin.jvm' version "1.3.70"
+    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
     id 'jacoco'
     id 'org.kordamp.gradle.markdown' version '2.0.0'
 }
@@ -30,7 +29,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-client-core:$ktor_version"
     compile "io.ktor:ktor-client-apache:$ktor_version"
-    compile "io.ktor:ktor-client-cio:$ktor_version"
     compile "io.ktor:ktor-client-gson:$ktor_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
