--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,16 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.19.0'
+version '1.20.0'
+
+def ktor_version = "1.3.2"
+def kotlin_version = "1.3.72"
 
 repositories {
     mavenCentral()
+    jcenter()
+    maven { url "https://dl.bintray.com/kotlin/ktor" }
+    maven { url "https://dl.bintray.com/kotlin/kotlinx" }
 }
 
 dependencies {
@@ -18,8 +24,12 @@ dependencies {
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "net.bytebuddy:byte-buddy:1.10.10"
     testImplementation "net.bytebuddy:byte-buddy-agent:1.10.10"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "io.ktor:ktor-client-core:$ktor_version"
+    compile "io.ktor:ktor-client-apache:$ktor_version"
+    compile "io.ktor:ktor-client-gson:$ktor_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 test {
