--- a/build.gradle
+++ b/build.gradle
@@ -49,10 +49,10 @@ intellij.version = project.hasProperty('intellijVersion') ? project.getProperty(
 
 patchPluginXml {
     changeNotes """
-      <h2>1.19.0</h2>
+      <h2>1.20.0</h2>
       <ul>
-        <li>Added (DJG300) and (DJG301) for inspection of Django authorization mixins in class-based views.</li>
-        <li>Fixed #118 : Fixers don't work for Mako and Jinja2 in edge case (@koxudaxi)</li>
+        <li>Added support for PyCharm 2020.2 series</li>
+        <li>Sped up security package scanning</li>
       </ul>
       """
 }
