--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.22.0'
+version '1.22.1'
 
 def ktor_version = "1.3.2"
 def kotlin_version = "1.3.72"
@@ -44,14 +44,14 @@ intellij {
     updateSinceUntilBuild false
 }
 // Make the intellij version overridable on the command line to support multiple build versions..
-intellij.version = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '202.6397-EAP-CANDIDATE-SNAPSHOT'
+intellij.version = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '2020.2'
 
 
 patchPluginXml {
     changeNotes """
-      <h2>1.22.0</h2>
+      <h2>1.22.1</h2>
       <ul>
-        <li>Use 202.6397-EAP-CANDIDATE-SNAPSHOT for CI/CD</li>
+        <li>Use 2020.2</li>
       </ul>
       """
 }
