--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.22'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.intellij' version '0.6.3'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.20'
     id 'jacoco'
     id 'org.kordamp.gradle.markdown' version '2.2.0'
 }
 
 group 'org.tonybaloney.security'
-version '1.22.1'
+version '1.22.2'
 
-def ktor_version = "1.4.0"
-def kotlin_version = "1.4.10"
+def ktor_version = "1.4.2"
+def kotlin_version = "1.4.20"
 
 repositories {
     mavenCentral()
@@ -20,10 +20,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.6.2'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.0'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    testImplementation "net.bytebuddy:byte-buddy:1.10.14"
-    testImplementation "net.bytebuddy:byte-buddy-agent:1.10.14"
+    testImplementation "net.bytebuddy:byte-buddy:1.10.18"
+    testImplementation "net.bytebuddy:byte-buddy-agent:1.10.18"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-client-core:$ktor_version"
@@ -49,9 +49,9 @@ intellij.version = project.hasProperty('intellijVersion') ? project.getProperty(
 
 patchPluginXml {
     changeNotes """
-      <h2>1.22.1</h2>
+      <h2>1.22.2</h2>
       <ul>
-        <li>Use 2020.2</li>
+        <li>Enable 2020.3</li>
       </ul>
       """
 }
