Update the package with new safetydb and new IDE support (#253)
* Update the package with new safetydb and new IDE support

* Change the gradle to work around the broken intellij package

* Update a bunch of deprecated API calls

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.24.1'
+version '1.24.2'
 
 def ktor_version = "1.6.2"
 def kotlin_version = "1.5.21"
@@ -38,26 +38,27 @@ test {
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
-intellij {
-    type 'PC'
-    plugins 'python-ce', 'yaml'
-    updateSinceUntilBuild false
-}
 // Make the intellij version overridable on the command line to support multiple build versions..
-intellij.version = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '211-EAP-SNAPSHOT'
+def intellijversion = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '2021.2'
 
+intellij {
+    type = 'PC'
+    plugins = ['python-ce', 'yaml']
+    updateSinceUntilBuild = false
+    version = intellijversion
+}
 
 patchPluginXml {
-    changeNotes """
-      <h2>1.24.1</h2>
+    changeNotes = """
+      <h2>1.24.2</h2>
       <ul>
-        <li>Fix a bug raising a runtime exception (PsiInvalidElementException)</li>
+        <li>Support for 2021.2 IDEs</li>
       </ul>
       """
 }
 
 publishPlugin {
-    token intellijPublishToken
+    token = intellijPublishToken
     // channels 'beta'
 }
 
