--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.24.2'
+version '1.24.3'
 
 def ktor_version = "1.6.4"
 def kotlin_version = "1.5.31"
@@ -50,9 +50,9 @@ intellij {
 
 patchPluginXml {
     changeNotes = """
-      <h2>1.24.2</h2>
+      <h2>1.24.3</h2>
       <ul>
-        <li>Support for 2021.2 IDEs</li>
+        <li>Safety db update</li>
       </ul>
       """
 }
