--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.24.3'
+version '1.25.0'
 
 def ktor_version = "1.6.6"
 def kotlin_version = "1.6.0"
@@ -21,9 +21,9 @@ repositories {
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.2'
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    testImplementation "net.bytebuddy:byte-buddy:1.12.2"
-    testImplementation "net.bytebuddy:byte-buddy-agent:1.12.2"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    testImplementation 'net.bytebuddy:byte-buddy:1.12.2'
+    testImplementation 'net.bytebuddy:byte-buddy-agent:1.12.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-client-core:$ktor_version"
@@ -39,7 +39,7 @@ test {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 // Make the intellij version overridable on the command line to support multiple build versions..
-def intellijversion = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '2021.2'
+def intellijversion = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '2021.3'
 
 intellij {
     type = 'PC'
@@ -50,9 +50,11 @@ intellij {
 
 patchPluginXml {
     changeNotes = """
-      <h2>1.24.3</h2>
+      <h2>1.25.0</h2>
       <ul>
-        <li>Safety db update</li>
+        <li>Added a PyPi API option for package security checking that uses the new PyPI vulnerability API</li>
+        <li>Support for 2021.3</li>
+        <li>Update safety DB to december </li>
       </ul>
       """
 }
