--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.25.0'
+version '1.25.1'
 
 def ktor_version = "1.6.6"
 def kotlin_version = "1.6.0"
@@ -37,15 +37,11 @@ test {
     dependsOn 'cleanTest'
 }
 
-// See https://github.com/JetBrains/gradle-intellij-plugin/
-// Make the intellij version overridable on the command line to support multiple build versions..
-def intellijversion = project.hasProperty('intellijVersion') ? project.getProperty('intellijVersion') : '2021.3'
-
 intellij {
     type = 'PC'
     plugins = ['python-ce', 'yaml']
     updateSinceUntilBuild = false
-    version = intellijversion
+    version = '2021.3'
 }
 
 patchPluginXml {
