--- a/build.gradle
+++ b/build.gradle
@@ -46,11 +46,9 @@ intellij {
 
 patchPluginXml {
     changeNotes = """
-      <h2>1.25.0</h2>
+      <h2>1.25.1</h2>
       <ul>
-        <li>Added a PyPi API option for package security checking that uses the new PyPI vulnerability API</li>
-        <li>Support for 2021.3</li>
-        <li>Update safety DB to december </li>
+        <li>Fixed plugin compatibility warning</li>
       </ul>
       """
 }
