--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ group 'org.tonybaloney.security'
 version '1.27.0'
 
 def ktor_version = "2.2.0"
+def atomicfu_version = "0.18.5"
 
 repositories {
     mavenCentral()
@@ -28,11 +29,17 @@ kotlin {
 }
 
 dependencies {
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.9.0'
-    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.7.2'
+    // Stability in IntelliJ
+    implementation "org.jetbrains.kotlinx:atomicfu:$atomicfu_version"
+
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
     testImplementation 'net.bytebuddy:byte-buddy:1.12.19'
     testImplementation 'net.bytebuddy:byte-buddy-agent:1.12.19'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.9.0'
+    // HAck to get build working. Try removing in future
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.7.2'
+
+    // For API clients
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-apache:$ktor_version"
     implementation "io.ktor:ktor-serialization-gson:$ktor_version"
